--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Golden Goshen Education Consultancy (GGECL)</title>
+    <title>Golden Goshen Education Consultancy (GGECL) - Study Abroad</title>
   </head>
   <body>
     <div id="root"></div>
